feat: Add Error model in API layer
