# api/v1/api.gen.go
@@ -11,6 +11,36 @@ import (
 	"time"
 )
 
+// Defines values for ErrorCode.
+const (
+	ParameterConflict     ErrorCode = "parameter_conflict"
+	ParameterInvalid      ErrorCode = "parameter_invalid"
+	ParameterMissing      ErrorCode = "parameter_missing"
+	ProcessingError       ErrorCode = "processing_error"
+	ResourceAlreadyExists ErrorCode = "resource_already_exists"
+	ResourceMissing       ErrorCode = "resource_missing"
+)
+
+// Defines values for ErrorType.
+const (
+	ApiError            ErrorType = "api_error"
+	InvalidRequestError ErrorType = "invalid_request_error"
+)
+
+// Error Error is the response model when an API call is unsuccessful.
+type Error struct {
+	Code    ErrorCode              `json:"code"`
+	Details map[string]interface{} `json:"details"`
+	Message string                 `json:"message"`
+	Type    ErrorType              `json:"type"`
+}
+
+// ErrorCode defines model for ErrorCode.
+type ErrorCode string
+
+// ErrorType defines model for ErrorType.
+type ErrorType string
+
 // Item Item represents an individual content item.
 type Item struct {
 	Content     string                 `json:"content"`
@@ -24,25 +54,11 @@ type Item struct {
 	UpdateTime  time.Time              `json:"update_time"`
 }
 
-// ItemsDeleteJSONBody defines parameters for ItemsDelete.
-type ItemsDeleteJSONBody struct {
-	Id int64 `json:"id"`
-}
-
-// ItemsDeleteJSONRequestBody defines body for ItemsDelete for application/json ContentType.
-type ItemsDeleteJSONRequestBody ItemsDeleteJSONBody
-
 // ItemsCreateJSONRequestBody defines body for ItemsCreate for application/json ContentType.
 type ItemsCreateJSONRequestBody = Item
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-
-	// (DELETE /items)
-	ItemsDelete(w http.ResponseWriter, r *http.Request)
-
-	// (GET /items)
-	ItemsList(w http.ResponseWriter, r *http.Request)
 
 	// (POST /items)
 	ItemsCreate(w http.ResponseWriter, r *http.Request)
@@ -56,36 +72,6 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(http.Handler) http.Handler
-
-// ItemsDelete operation middleware
-func (siw *ServerInterfaceWrapper) ItemsDelete(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.ItemsDelete(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
-
-// ItemsList operation middleware
-func (siw *ServerInterfaceWrapper) ItemsList(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.ItemsList(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
 
 // ItemsCreate operation middleware
 func (siw *ServerInterfaceWrapper) ItemsCreate(w http.ResponseWriter, r *http.Request) {
@@ -216,8 +202,6 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 		ErrorHandlerFunc:   options.ErrorHandlerFunc,
 	}
 
-	m.HandleFunc("DELETE "+options.BaseURL+"/items", wrapper.ItemsDelete)
-	m.HandleFunc("GET "+options.BaseURL+"/items", wrapper.ItemsList)
 	m.HandleFunc("POST "+options.BaseURL+"/items", wrapper.ItemsCreate)
 
 	return m
